--- a/assets/sp.css
+++ b/assets/sp.css
@@ -12,6 +12,11 @@ body {
     background: var(--primary);
     color: var(--secondary);
     font-family: 'VT323', monospace;
+    -ms-overflow-style: none;
+	scrollbar-width: none;
+}
+body::-webkit-scrollbar {
+	display: none;
 }
 /* set transtitions */
 body, #switchtheme, #icon-theme {
